# ont-sim

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  redis.conf  requirements.txt
backend/src/: __init__.py
backend/src/application/: __init__.py  benchmark_service.py  centroid_service.py  research_questions.py  similarity_methods.py  similarity_service.py  tasks.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py  bert_embedding_service.py  cache_manager.py  data_loader.py  disk_cache.py  embedding_service.py  (+10 more)
backend/tests/: conftest.py  test_benchmark_methods.py  test_benchmark_service.py  test_bert_embedding_service.py  test_cache_manager.py  test_cache_manager_extended.py  test_centroid_service.py  test_data_loader.py  test_disk_cache.py  test_distance_inversion.py  test_domain.py  test_embedding_service.py  test_embedding_service_extended.py  test_enriched_embedding_service.py  test_ensemble_weights.py  test_normalize_ensemble.py  test_rag_cache.py  test_rag_centroid_alpha.py  test_rag_english.py  test_rag_fallback.py  test_rag_service.py  test_research_questions.py  test_results_storage.py  test_retrieval_service.py  test_retrieval_service_extended.py  test_retrieval_service_save_load.py  test_routes_extended.py  test_routes_rag_alpha.py  test_routes_schemas.py  test_similarity_api.py  test_similarity_methods.py  test_similarity_service.py  test_tasks.py  test_text_preprocessing.py  test_text_preprocessing_extended.py  test_tfidf_english.py  test_tfidf_service.py  test_wordnet_service.py
(+31 files in other folders)
